<!-- Copyright 2016 Sunil Gowdru C,
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
    *
    * Purpose: Example classes conversion to/from json
    * This example shows the use of Swift
    * reflection in creating json string of a Swift object.
    *
    * I hereby give the instructors, TA right to use of building and evaluating
    * the software package for the purpose of determining your grade and program assessment.
    *
    * SER 598 - Mobile Systems
    * @author Sunil Gowdru C
    * mailto:sunil.gowdru@asu.edu
    * Software Engineering, CIDSE, IAFSE, ASU Poly
    * @version January 2016
    -->
<resources>
    <string name="app_name">MovieGyan</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="actors">Actors</string>
    <string name="plot">Plot</string>
</resources>
