<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2016 Sunil Gowdru C,
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
    *
    * Purpose: Example classes conversion to/from json
    * This example shows the use of Swift
    * reflection in creating json string of a Swift object.
    *
    * I hereby give the instructors, TA right to use of building and evaluating
    * the software package for the purpose of determining your grade and program assessment.
    *
    * SER 598 - Mobile Systems
    * @author Sunil Gowdru C
    * mailto:sunil.gowdru@asu.edu
    * Software Engineering, CIDSE, IAFSE, ASU Poly
    * @version January 2016
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="moviegyan.sgowdru.msse.asu.edu.moviegyan.MainActivity">

    <TextView
        android:id="@+id/titleT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp" />

    <TextView
        android:id="@+id/yearT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleT"
        android:layout_marginTop="30dp"
        android:text="@string/year"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />


    <TextView
        android:id="@+id/ratedT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yearT"
        android:layout_marginTop="30dp"
        android:text="@string/rated"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />


    <TextView
        android:id="@+id/releasedT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratedT"
        android:layout_marginTop="30dp"
        android:text="@string/released"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rated"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/runtimeT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/releasedT"
        android:layout_marginTop="30dp"
        android:text="@string/runtime"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/released"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/genreT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/runtimeT"
        android:layout_marginTop="30dp"
        android:text="@string/genre"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/runtime"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/actorsT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genreT"
        android:layout_marginTop="30dp"
        android:text="@string/actors"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/plotT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actorsT"
        android:layout_marginTop="40dp"
        android:text="@string/plot"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actors"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="30dp" />

</RelativeLayout>
